# llmforge

./: LICENSE  README.md  pyproject.toml
config/: default.toml
llmforge/: __init__.py  cli.py  config.py
llmforge/backends/: __init__.py  anthropic.py  google.py  llamacpp.py  ollama.py  openai_compat.py  openrouter.py
llmforge/domain/: hardware.py  models.py  profiler.py
llmforge/mcp/: __init__.py  client.py  tool_loop.py  types.py
llmforge/models/: __init__.py  downloader.py
llmforge/rag/: __init__.py  chunker.py  context.py  embeddings.py  reranker.py  store.py  watcher.py  web_search.py
llmforge/scoring/: __init__.py
llmforge/server/: __init__.py  app.py
llmforge/storage/: db.py
llmforge/tools/: __init__.py  agent.py  code_exec.py
llmforge/ui/: app.py
llmforge/ui/css/: app.tcss
llmforge/ui/screens/: chat.py  compare.py  experiments.py  models.py  sessions.py  sweep.py  templates.py
llmforge/ui/widgets/: params.py  profiler.py
